# Paraguacraft

./: .gitignore  CHANGELOG.md  LICENSE  Paraguacraft_update.patch  README.md  _check_mc_png.py  _fix_overlay.py  bash.exe.stackdump  core.py  crear_resource_pack.py  generador_parches.py  instrucciones_mc.txt  latest.json  launcher.py  launcher2.py  paragua.py  paraguacraft_session.json  requirements-paragua.txt  rthook_core.py  run_paraguacraft.bat  script_mc.iss  test_mongo.py  test_smoke.py  version.json  version.txt
launcher/src-tauri/: Cargo.toml  build.rs  tauri.ci.linux.conf.json  tauri.ci.macos.conf.json  tauri.ci.windows.conf.json  tauri.conf.json  tauri.signed.conf.json  updater.key.pub
launcher/src-tauri/capabilities/: default.json
launcher/src-tauri/icons/: icon.icns
launcher/src-tauri/resources/bundled/pvp/: manifest.json
launcher/src-tauri/resources/bundled/pvp-modern/: manifest.json
launcher/src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
launcher/src-tauri/src/commands/: accounts.rs  bedrock.rs  cleanup.rs  compete.rs  diagnostics.rs  extras.rs  favorites.rs  hardware.rs  instances.rs  java.rs  launch.rs  loaders.rs  mod.rs  performance.rs  playbook.rs  servers.rs  settings.rs  skins.rs  spotify.rs  store.rs  updater.rs  versions.rs
launcher/src-tauri/src/config/: keys.rs  mod.rs
launcher/src-tauri/src/core/: accounts.rs  ai.rs  compete_mode.rs  diagnostics.rs  downloads.rs  favorites.rs  game_profiles.rs  game_session.rs  hardware.rs  instance_repair.rs  instance_weight.rs  instances.rs  java.rs  loaders.rs  mc_ping.rs  mod.rs  mod_conflicts.rs  modern_packs.rs  modern_pvp.rs  modern_servers.rs  music_art_cache.rs  overlay_ipc.rs  paths.rs  performance.rs  pre_launch.rs  pvp_mod_stack.rs  pvp_packs.rs  server_admin.rs  server_backups.rs  server_console.rs  server_hangar.rs  server_manager.rs  server_properties.rs  server_repair.rs  server_setup.rs  servers.rs  tray_lite.rs  updater.rs
launcher/src-tauri/src/core/accounts/: microsoft.rs  mod.rs  offline.rs  store.rs
launcher/src-tauri/src/core/bedrock/: mod.rs  windows.rs
launcher/src-tauri/src/core/branding/: deploy.rs  mod.rs  options.rs  version.rs
launcher/src-tauri/src/core/extras/: discord_rpc.rs  game_mode.rs  game_presence.rs  java_priority.rs  maintenance.rs  mod.rs  turbo.rs
launcher/src-tauri/src/core/instances/: backups.rs  content.rs  content_metadata.rs  export.rs  icons.rs  importers.rs  mod.rs  profiles.rs  resource_packs.rs  scan.rs
launcher/src-tauri/src/core/java/: adoptium.rs  detect.rs  mod.rs  mojang.rs  resolve.rs  verify.rs
launcher/src-tauri/src/core/launch/: mod.rs  modern_pvp_jvm.rs  optimizer.rs  pvp_jvm.rs  window_title.rs
launcher/src-tauri/src/core/loaders/: fabric.rs  fabric_iris.rs  forge.rs  mod.rs  neoforge.rs  optifine.rs  pvp.rs  pvp_modern.rs  quilt.rs
launcher/src-tauri/src/core/net/: mod.rs
launcher/src-tauri/src/core/skins/: catalog.rs  history.rs  mod.rs  mojang.rs  offline.rs  pending_premium.rs
launcher/src-tauri/src/core/spotify/: mod.rs  (+1 more)
launcher/src-tauri/src/models/: mod.rs
launcher/src-tauri/windows/: hooks.nsh
(+474 files in other folders)
